--- a/src/common/sass/widgets/_panel.scss
+++ b/src/common/sass/widgets/_panel.scss
@@ -53,7 +53,7 @@
     }
     .system-status-icon {
       icon-size: 1.16em;
-      padding: 0 5px; 
+      padding: 0 $tiny_padding; 
     }
     .unlock-screen #panel &,
     .login-screen #panel &,
